--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,21 +6,17 @@
 {% block content %}
 <div class="page-home">
 
-    <!-- Seção 1: Banner Principal (Hero) -->
     <section class="hero-section">
         <div class="hero-content text-center">
-            <!-- Título principal -->
             <h1>Escola Professor José Ranieri</h1>
             <h4>Mais de 40 anos educando gerações em Bauru!</h4>
             <br>
     </section>
 
-    <!-- Seção 2: Destaques / Seções Principais -->
     <section class="featured-sections container">
         {# <h2 class="section-title">Nossos Pilares</h2> #}
         <div class="card-grid">
 
-            <!-- Destaque 1: História -->
             <div class="card card-hover">
                 <i class="fas fa-book-open card-icon"></i>
                 <h3>História Digital</h3>
@@ -28,7 +24,6 @@
                 <a href="#" class="text-link">Ler o Livro <i class="fas fa-chevron-right"></i></a>
             </div>
 
-            <!-- Destaque 2: Coral -->
             <div class="card card-hover">
                 <i class="fas fa-music card-icon"></i>
                 <h3>Coral Ranieri</h3>
@@ -36,7 +31,6 @@
                 <a href="#" class="text-link">Ver Repertório <i class="fas fa-chevron-right"></i></a>
             </div>
 
-            <!-- Destaque 3: Mídias/Galerias -->
             <div class="card card-hover">
                 <i class="fas fa-images card-icon"></i>
                 <h3>Galerias de Mídia</h3>
@@ -47,15 +41,14 @@
         </div>
     </section>
 
-    <!-- Seção 3: Chamada para Ação para Usuário Autenticado/Login -->
     <section class="cta-section bg-secondary">
         <div class="container text-center">
             <h2>Comunidade Ranieri</h2>
             <p>Acesse seu painel para mensagens, materiais exclusivos e informações da sua turma, entre outras!</p>
             {% if not user.is_authenticated %}
-                <a href="#" class="btn-secondary btn-lg">Fazer Login <i class="fas fa-sign-in-alt"></i></a>
+                <a href="{% url 'users:login' %}" class="btn-secondary btn-lg">Fazer Login <i class="fas fa-sign-in-alt"></i></a>
             {% else %}
-                <a href="#" class="btn-secondary btn-lg">Ir para o Painel <i class="fas fa-user-circle"></i></a>
+                <a href="{% url 'users:dashboard' %}" class="btn-secondary btn-lg">Ir para o Painel <i class="fas fa-user-circle"></i></a>
             {% endif %}
         </div>
     </section>
