--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -72,7 +72,7 @@
 
         <div class="text-center mt-3">
             {# Assumindo que 'profile' está definido e é o nome da URL de visualização do perfil #}
-            <a href="{% url 'profile' %}" class="text-primary font-weight-bold">
+            <a href="{% url 'users:profile' %}" class="text-primary font-weight-bold">
                 &larr; Voltar para o Perfil
             </a>
         </div>
