--- a/users/templates/users/profile_edit.html
+++ b/users/templates/users/profile_edit.html
@@ -24,7 +24,7 @@
     {% endif %}
 
     <div class="mb-4">
-        <a href="{% url 'profile' %}" class="btn btn-back">
+        <a href="{% url 'users:profile' %}" class="btn btn-back">
             &larr; Voltar para a Visualização do Perfil
         </a>
     </div>
