--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -145,11 +145,13 @@
         </div>
 
     <div class="profile-actions mt-4">
-        <a href="{% url 'profile_edit' %}" class="btn btn-info action-button mb-2">
+        {# CORREÇÃO AQUI: Adicionar o namespace 'users:' #}
+        <a href="{% url 'users:profile_edit' %}" class="btn btn-info action-button mb-2">
             <i class="fas fa-edit"></i> Editar Meus Dados
         </a>
 
-        <a href="{% url 'password_change' %}" class="btn btn-warning action-button">
+        {# CORREÇÃO AQUI: Adicionar o namespace 'users:' #}
+        <a href="{% url 'users:password_change' %}" class="btn btn-warning action-button">
             <i class="fas fa-key"></i> Alterar Senha
         </a>
     </div>
