esqueci minha senha ok

--- a/users/templates/registration/password_reset_done.html
+++ b/users/templates/registration/password_reset_done.html
@@ -27,7 +27,7 @@
 
         <div class="text-center mt-3">
             {# Uso de action-button para garantir 100% de largura no contexto reset-box #}
-            <a href="{% url 'login' %}" class="btn btn-primary action-button">
+            <a href="{% url 'users:login' %}" class="btn btn-primary action-button">
                 Voltar para a página de Login
             </a>
         </div>
