--- a/users/templates/registration/password_reset_email.html
+++ b/users/templates/registration/password_reset_email.html
@@ -6,7 +6,7 @@
 
 {% blocktrans %}Por favor, vá para a seguinte página e escolha uma nova senha:{% endblocktrans %}
 
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ protocol }}://{{ domain }}{% url 'users:password_reset_confirm' uidb64=uid token=token %}
 
 {% blocktrans %}Se você não solicitou esta redefinição, por favor, ignore este e-mail. Seu nome de usuário não será alterado.{% endblocktrans %}
 
