--- a/users/templates/registration/password_reset_form.html
+++ b/users/templates/registration/password_reset_form.html
@@ -53,7 +53,7 @@
 
         <div class="text-center mt-3">
             {# Uso de text-primary e font-weight-bold para seguir o padrão de link de destaque #}
-            <a href="{% url 'login' %}" class="text-primary font-weight-bold">
+            <a href="{% url 'users:login' %}" class="text-primary font-weight-bold">
                 &larr; Voltar para o Login
             </a>
         </div>
