--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -21,7 +21,8 @@
                 <i class="fas fa-book-open card-icon"></i>
                 <h3>História Digital</h3>
                 <p>Uma narrativa interativa sobre as décadas de fundação e crescimento da Ranieri.</p>
-                <a href="#" class="text-link">Ler o Livro <i class="fas fa-chevron-right"></i></a>
+                {# 🚨 CORREÇÃO: Atualizado o link para o Livro Digital com namespace #}
+                <a href="{% url 'historia:livro_digital' %}" class="text-link">Ler o Livro <i class="fas fa-chevron-right"></i></a>
             </div>
 
             <div class="card card-hover">
@@ -46,7 +47,11 @@
             <h2>Comunidade Ranieri</h2>
             <p>Acesse seu painel para mensagens, materiais exclusivos e informações da sua turma, entre outras!</p>
             {% if not user.is_authenticated %}
-                <a href="{% url 'users:login' %}" class="btn-secondary btn-lg">Fazer Login <i class="fas fa-sign-in-alt"></i></a>
+                <div class="cta-buttons">
+                    <a href="{% url 'users:login' %}" class="btn-secondary btn-lg mr-2">Fazer Login <i class="fas fa-sign-in-alt"></i></a>
+                    {# 🚨 ADIÇÃO: Botão de Cadastro #}
+                    <a href="{% url 'users:register' %}" class="btn-primary btn-lg">Cadastre-se <i class="fas fa-user-plus"></i></a>
+                </div>
             {% else %}
                 <a href="{% url 'users:dashboard' %}" class="btn-secondary btn-lg">Ir para o Painel <i class="fas fa-user-circle"></i></a>
             {% endif %}
