--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -9,8 +9,7 @@
     <nav>
         <ul id="main-nav-ul">
             <li><a href="{% url 'core:home' %}">Home</a></li>
-            <li><a href="#">História</a></li>
-            <li><a href="#">Coral</a></li>
+            <li><a href="{% url 'historia:livro_digital' %}">História</a></li>  <li><a href="#">Coral</a></li>
             <li><a href="#">Brincando & Dialogando</a></li>
             <li><a href="#">Galerias</a></li>
 
@@ -23,6 +22,8 @@
                     </form>
                 </li>
             {% else %}
+                {# 🚨 ADIÇÃO: Link para Cadastro #}
+                <li><a href="{% url 'users:register' %}" class="btn-primary">Cadastro</a></li>
                 <li><a href="{% url 'users:login' %}" class="btn-primary btn-logout">Entrar</a></li>
             {% endif %}
         </ul>
