app sim cozinha

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -33,6 +33,14 @@
                 <a href="{% url 'coral:index' %}" class="text-link">Ver Livros <i class="fas fa-chevron-right"></i></a>
             </div>
 
+            {# 🚨 NOVO CARD: SIMONINHA NA COZINHA #}
+            <div class="card card-hover">
+                <i class="fas fa-utensils card-icon"></i>
+                <h3>Simoninha na Cozinha</h3>
+                <p>Receitas e eventos culinários em formato de catálogo digital.</p>
+                <a href="{% url 'sim_cozinha:index' %}" class="text-link">Explorar Receitas <i class="fas fa-chevron-right"></i></a>
+            </div>
+
             <div class="card card-hover">
                 <i class="fas fa-images card-icon"></i>
                 <h3>Galerias de Mídia</h3>
