--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -12,6 +12,8 @@
             <li><a href="{% url 'historia:livro_digital' %}">História</a></li>
             {# CORREÇÃO: Aponta para a rota de índice 'coral:index', que exibe os botões de escolha (coral_index.html) #}
             <li><a href="{% url 'coral:index' %}">Coral</a></li>
+            {# 🚨 CORREÇÃO: Link para o Índice Simoninha na Cozinha (Rota 'sim_cozinha:index') #}
+            <li><a href="{% url 'sim_cozinha:index' %}">Simoninha na Cozinha</a></li>
             <li><a href="#">Brincando & Dialogando</a></li>
             <li><a href="#">Galerias</a></li>
 
