app brinc_dialogando

--- a/coral/templates/coral/coral_index.html
+++ b/coral/templates/coral/coral_index.html
@@ -9,6 +9,15 @@
 
     <div class="section-alt">
         <div class="container text-center">
+
+            {# Logo do Coral #}
+            <img src="{% static 'images/logo_coral/logo_coral.png' %}"
+                 alt="Logo do Coral Ranieri"
+                 class="img-fluid mb-5 mx-auto"
+                 style="max-height: 150px;"
+                 onerror="this.onerror=null; this.src='https://placehold.co/150x150/C6F6D5/2F855A?text=LOGO+CORAL'">
+
+
             <h1 class="section-title">Bem-vindo ao Projeto Coral Ranieri</h1>
             <p class="section-subtitle">Selecione o livro digital que deseja explorar:</p>
 
