--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -14,7 +14,8 @@
             <li><a href="{% url 'coral:index' %}">Coral</a></li>
             {# 🚨 CORREÇÃO: Link para o Índice Simoninha na Cozinha (Rota 'sim_cozinha:index') #}
             <li><a href="{% url 'sim_cozinha:index' %}">Simoninha na Cozinha</a></li>
-            <li><a href="#">Brincando & Dialogando</a></li>
+            {# 🚨 CORREÇÃO: Link para o Índice Brincando & Dialogando (Rota 'brinc_dialogando:index') #}
+            <li><a href="{% url 'brinc_dialogando:index' %}">Brincando & Dialogando</a></li>
             <li><a href="#">Galerias</a></li>
 
             {% if user.is_authenticated %}
